...
        android:textSize="17sp"
        android:text="@string/greeting"
        android:padding="10dp"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="67dp" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/orange"
        android:transitionName="fab_transition"
        android:src="@drawable/ic_add"
...
