...
    <string name="login_success_message">Anda berhasil login. Apakah Anda siap untuk membagi cerita?</string>
    <string name="user_not_found">"Pengguna tidak ditemukan</string>
    <string name="register_success_message">Akun %1s telah berhasil dibuat. Yuk, berbagi cerita dan pengalaman Anda</string>
    <string name="continue_button">Lanjut</string>
    <string name="login_failed_title">Login Gagal</string>
    <string name="error_parse_message">Terjadi kesalahan saat parsing error</string>
    <string name="ok_button">OK</string>

    <string name="logout_popup_text">Konfirmasi Logout</string>
    <string name="logout_message">Apakah Anda yakin ingin keluar?</string>
    <string name="yes_button">Ya</string>
    <string name="cancel_button">Batal</string>

...
