<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.newstory.NewStoryActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="fab_transition"
            android:paddingTop="?attr/actionBarSize"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">



            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressLoadingIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/storyImageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:transitionName="imageStory"
                app:layout_constraintTop_toBottomOf="@id/progressLoadingIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_placeholder"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:transitionName="camera_button"
                android:background="@drawable/button_rounded_orange"
                app:layout_constraintTop_toBottomOf="@id/storyImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/galleryButton"
                app:backgroundTint="@color/orange"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/galleryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:transitionName="gallery_button"
                android:background="@drawable/button_rounded_orange"
                app:layout_constraintTop_toBottomOf="@id/storyImageView"
                app:layout_constraintStart_toEndOf="@id/cameraButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@color/orange"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:hint="@string/description"
                android:textColor="@color/text_color"
                android:transitionName="edit_text"
                android:background="@drawable/bg_edittext"
                android:padding="12dp"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/galleryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/current_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/button_rounded_orange"
                android:text="@string/upload"
                android:transitionName="upload_button"
                app:backgroundTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

            <TextView
                android:id="@+id/tvLocationPreview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location_off"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switchLocation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:elevation="20dp">

        <ProgressBar
            android:id="@+id/progressBarCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/orange"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar" />
    </FrameLayout>
</FrameLayout>
